--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gulp-webp": "^3.0.0",
     "posthtml-include": "^1.2.0",
     "run-sequence": "^2.2.1"
+  },
+  "dependencies": {
+    "natives": "^1.1.6"
   }
 }
